Immutable ResourceCollection with mount management.
* First pass at immutable usage.
  Need to handle setters next commit
* Cleaned up constructors.
* Improved testing.
* Adding Resource.isArchive to test for jar/war/zip
* Adding new Resource.fromList to help with various
  String lists (csv, arrays, collections, etc) to
  List<Resource> creation
* Adding StringUtil.tokenizerAsIterator to help
  reduce code duplication with Resource.fromList()
  implementations